vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package_instantiation__tests__package_instantiation_generic_map.snap
---
source: vhdl_syntax/src/parser/productions/package_instantiation.rs
expression: "to_test_text(Parser::package_instantiation_declaration,\n\"\\\npackage ident is new lib.foo.bar\n  generic map (\n    foo => bar\n  );\")"
---
PackageInstantiationDeclarationItem
  PackageInstantiationDeclaration
    PackageInstantiationPreamble
      Keyword(Package)
      Identifier 'ident'
      Keyword(Is)
      Keyword(New)
      Name
        NameDesignatorPrefix
          Identifier 'lib'
        SelectedName
          Dot
          Identifier 'foo'
        SelectedName
          Dot
          Identifier 'bar'
    GenericMapAspect
      Keyword(Generic)
      Keyword(Map)
      LeftPar
      AssociationList
        AssociationElement
          Formal
            Name
              NameDesignatorPrefix
                Identifier 'foo'
            RightArrow
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'bar'
      RightPar
    SemiColon
